tests/negative/return_type_mismatch.ax
module return_type_mismatch;

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    return true;
}
